# ExcelDiff

./: .gitignore  CHANGELOG.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: python-package.yml
assets/data/: test_table_1.ods  test_table_2.ods  test_table_3.xlsx
exceldiff/: __init__.py  command_line_options.py  log_handler.py  main.py
spreadsheetdiff/: __init__.py  command_line_options.py  log_handler.py  main.py
