;[metadata]
;name = ExcelDiff
;version = attr: ExcelDiff.0.1.0
;description = A tool to compare two excel files with annotation of the differences
;long_description = file: README.md, CHANGELOG.md, LICENSE
;keywords = excel, compare, diff, differences
;license = GPLv3 License
;classifiers =
;    Programming Language :: Python :: 3
;
;[options]
;zip_safe = False
;include_package_data = True
;packages = find:
;install_requires =
;;    requests
;    importlib-metadata;
;requires-python = ">=3.6"
;
;;[options.package_data]
;;* = *.txt, *.rst
;;hello = *.msg
;
;[options.entry_points]
;console_scripts =
;    executable-name = ExcelDiff.exceldiff:main
;
;;[options.extras_require]
;;pdf = ReportLab>=1.2; RXP
;;rest = docutils>=0.3; pack ==1.1, ==1.3
;;
;;[options.packages.find]
;;exclude =
;;    examples*
;;    tools*
;;    docs*
;;    my_package.tests*